# eagle

./: CMakeLists.txt  README.md
include/GLPP/: 2d_object.h  glBuffer.h  glBuffer.line.h  glDrawableWidget.h  glFont.h  glTextWidget.h  glWidget.h  glWidgetManager.h  gl_drawing_obj.h  gl_resource_manager.h  gl_text.h  shader.h  texture.h  util.h  vertex_arrays.h  vertex_arrays.line.h  window.h
include/Geo/: geometry_3d_object.h  geometry_common.h
include/Math/: multivcalculus.h
include/util/: file.h  font_util.h  ini.h  lamda_func_ptr.h
libsrc/GLPP/: CMakeLists.txt  glBuffer.cpp  glBuffer.line.cpp  glDrawableWidget.cpp  glFont.cpp  glWidget.cpp  glWidgetManager.cpp  gl_resource_manager.cpp  gl_text.cpp  shader.cpp  shader_util.cpp  stb_image.h  texture.cpp  vertex_arrays.cpp  vertex_arrays.line.cpp  window.cpp
libsrc/geo/: CMakeLists.txt  coordinate_convert.cpp  geometry_object_3d.cpp
libsrc/graphf/: CMakeLists.txt  func_collection.cpp
libsrc/math/: CMakeLists.txt  multivCalculus.cpp
libsrc/util/: CMakeLists.txt  file.cpp  font_util.cpp  ini.cpp
resource/config/: graph3d.ini
resource/shader/: fragment.glsl  meshf.glsl  meshv.glsl  plane3df.glsl  plane3dv.glsl  textf.glsl  textv.glsl  vertex.glsl  widgetf.glsl  widgetv.glsl
src/: CMakeLists.txt  GlApp.v0.1.cpp  GlApp.v0.1.h  GtkWindow.cpp  GtkWindow.h  Highlight.cpp  Highlight.h  Plane3dAddDig.cpp  Plane3dAddDig.h  Plot3dDig.cpp  Plot3dDig.h  VectorAddDialog.cpp  VectorAddDialog.h  VectorAddDialog.ui~  axis.3D.cpp  axis.3D.h  define_common.h  glWidgetWindow.cpp  glWidgetWindow.h  gl_drawing_obj.h  gl_resource_manager.cpp  gl_text.cpp  gl_text.h  ini.cpp  main.cpp  mesh.cpp  mesh.h  object3d.cpp  object3d.h  plane3d.cpp  plane3d.h  plane3d_add_dialog-window.ui  plot3d.cpp  plot3d.h  plot3d_add_vector_component-window.ui  vector3d.cpp  vector3d.h  vector_add_dialog-window.ui
test/: CMakeLists.txt  fontconfig_test.cpp  main.cpp
